(26/05/15)
==========

· Added server > Nagios

· Added Info > Webmin

(23/05/15)
==========

· Added games > OpenBor for Raspberry Pi, Debian Jessie

(19/05/15)
==========

· Added game Arx Fatalis for Raspberry Pi 2, ODROID and Debian Jessie

(09/05/15)
==========

· Added server > Ad Blocker

(21/04/15)
==========

· Added others > ramlog

· Uddated tweaks > others.sh (Install package fuck)

(18/04/15)
==========

· Added Emus > Picodrive & Caprice for Raspberry Pi 2 (Amstrad emulator)

(17/04/15)
==========

· Updated SDL2, Spectrum emulator

(05/04/15)
==========

· Added Others > NetTools - MITM Pentesting Opensource Toolkit

(21/03/15)
==========

· Updated Emulators > Mame

(19/03/15)
==========

· Updated Games > Return to Castle Wolfenstein

(17/03/15)
==========

· Added Games > Descent 1 & 2 (Shareware)

· Update Emus > PiSNES

(16/03/15)
==========

· ODROID: Games > Quake 2

· RPi: Updated Games > Quake 2

· Updated Tweaks > Others

(14/03/15)
==========

· Enhaced Games > Crispy-Doom

· ODROID: Games > Crispy-Doom

(12/03/15)
==========

· Added Server > Install vsftpd (FTP) Server

(11/03/15)
==========

· ODROID: Added Tweaks > others script

· Added Tweaks > removepkg script

· Update Info > check lastmod image

· Added Server > Install vsftpd (FTP) Server

(09/03/15)
==========

· ODROID: Added Tweaks > autologin script

(08/03/15)
==========

· piKiss.sh refactorized

(11/01/15)
==========

· Updated ownCloud to 7.0.4

(11/01/15)
==========

· Added Info > Lynis (security auditing tool)

(29/12/14)
==========

· Update Tweaks > other & removepkg scripts

· Update Games > minecraft, quake, crispydoom

· Update Emus > pifba

· Update Info > check last images, test inet scripts

(08/12/14)
==========

· Update Server > NGINX (latest compile) web server

(06/12/14)
==========

· Update Emulators > UAE4ALL ver 2.5.3.2

(25/11/14)
==========

· Update Emulators > Final Burn Alpha 2x for Raspberry Pi (4 players)

(24/11/14)
==========
