@@ -1,3 +1,13 @@
+(29/03/16)
+==========
+
+· Added server > VNCServer
+
+(25/02/16)
+==========
+
+· Added games > Game Maker games
+
 (26/05/15)
 ==========
 
@@ -197,7 +207,7 @@
 (14/08/14)
 ==========
 
-· Added Emulators > UAE4ALL 0.3 RC4 
+· Added Emulators > UAE4ALL 0.3 RC4
 
 · Added Server > ownCloud 7.0.1 with NginX and SSL
 
